--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,300,600');
+
 .search-bar {
   margin: 20px;
   text-align: center;
@@ -24,4 +26,11 @@
 
 .list-group-item:hover {
   background-color: #eee;
+}
+
+.title {
+  font-size: 2em;
+  font-weight: 900;
+  font-family: 'Open Sans';
+  letter-spacing: -0.5px;
 }
