--- a/style/style.css
+++ b/style/style.css
@@ -2,11 +2,11 @@
 
 .search-bar {
   margin: 20px;
-  text-align: center;
+  text-align: left;
 }
 
 .search-bar input {
-  width: 75%;
+  width: 605px;
 }
 
 .video-item img {
