--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,300,600');
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,300,600');
 
 .search-bar {
   margin: 20px;
@@ -30,10 +30,18 @@
 }
 
 .title {
-  font-size: 2em;
-  font-weight: 900;
-  font-family: 'Open Sans';
-  letter-spacing: -0.5px;
+  font-size: 22px;
+  font-family: 'Roboto';
+}
+
+.description {
+  font-size: 15px;
+  font-family: 'Roboto';
+  padding-top: 10px;
+}
+
+.media-heading {
+  font-family: 'Roboto'
 }
 
 button {
